--- a/config/pixo.conf
+++ b/config/pixo.conf
@@ -2,5 +2,4 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
-CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_MOUSE_TICK_DURATION=16
+CONFIG_ZMK_KEYBOARD_NAME="pixo"
