--- a/config/pixo.conf
+++ b/config/pixo.conf
@@ -1,5 +1,10 @@
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 CONFIG_ZMK_KEYBOARD_NAME="pixo"
+CONFIG_BT_GATT_AUTO_SEC_REQ=y
+CONFIG_RGBLED_WIDGET=y
+CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
