--- a/boards/shields/pixo/pixo.dtsi
+++ b/boards/shields/pixo/pixo.dtsi
@@ -1,9 +1,11 @@
+#include "pixo-layouts.dtsi"
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
+        zmk,physical-layout = &pixo_physical_layout;
     };
 
     default_transform: keymap_transform_0 {
