--- a/config/pixo.conf
+++ b/config/pixo.conf
@@ -9,4 +9,4 @@ CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
-ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO=y
