--- a/boards/shields/pixo/pixo.dtsi
+++ b/boards/shields/pixo/pixo.dtsi
@@ -1,11 +1,11 @@
-#include "pixo-layouts.dtsi"
 #include <dt-bindings/zmk/matrix_transform.h>
+#include "pixo-layouts.dtsi"
 
 / {
     chosen {
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
-        zmk,physical-layout = &pixo_physical_layout;
+        zmk,physical-layout = &physical_layout0;
     };
 
     default_transform: keymap_transform_0 {
@@ -30,5 +30,9 @@ RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4)                                 RC(2,7) 
             , <&xiao_d 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)> // Row C from the schematic file
             ;
 
+    };
+    
+    &physical_layout0 {
+        transform = <&default_transform>;
     };
 };
