--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,7 @@
 ---
 include:
   - board: seeeduino_xiao_ble
+    snippet: studio-rpc-usb-uart
     shield: pixo_left rgbled_adapter
   - board: seeeduino_xiao_ble
     shield: pixo_right rgbled_adapter
